# enchant

./: .travis.yml  AUTHORS  configure.ac
src/: Makefile.am
src/applespell/: Makefile.am  applespell_provider.m
unittests/: EnchantBrokerTestFixture.h  EnchantDictionaryTestFixture.h  EnchantTestFixture.h  Makefile.am
unittests/provider/: enchant_provider_get_prefix_dir_tests.cpp  enchant_provider_get_user_config_dirs_tests.cpp  enchant_provider_get_user_language_tests.cpp
unittests/pwl/: enchant_pwl_tests.cpp
